--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prompt Quality Analyzer</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
+   <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='new2.svg') }}" sizes="any">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter..." rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
